# localPlannerBench

./: pyproject.toml
experiments/10_sensor_fabrics_urdf_exp_3/setup/: exp.yaml  sensor_fabric_256.yaml  sensor_fabric_512.yaml  sensor_fabric_64.yaml
experiments/12_sensor_fabrics_urdf_exp_5_moving_obs/setup/: exp.yaml  exp_dynamic_goal.yaml  fabric.yaml
experiments/7_sensor_fabrics/setup/: sensor_fabric.yaml
experiments/7_sensor_fabrics_planar/setup/: exp.yaml  fabric.yaml
experiments/8_sensor_fabrics_urdf/setup/: exp.yaml  sensor_fabric.yaml  sensor_fabric_1.yaml  sensor_fabric_1024.yaml  sensor_fabric_256.yaml
experiments/8_sensor_fabrics_urdf_exp_1/setup/: sensor_fabric_1.yaml  sensor_fabric_16.yaml
experiments/9_sensor_fabrics_urdf_exp_2/setup/: exp.yaml  exp_1.yaml  exp_dynamic_obs_goal.yaml  fabric.yaml  sensor_fabric_128.yaml  sensor_fabric_16.yaml  sensor_fabric_2.yaml  sensor_fabric_2048.yaml  sensor_fabric_32.yaml  sensor_fabric_512.yaml  sensor_fabric_512_filter.yaml
experiments/a0_scaling_factor/results/: composition_time.csv
experiments/a0_scaling_factor/setup/: exp_1.yaml  exp_128.yaml  exp_16.yaml  exp_2.yaml  exp_4.yaml  exp_64.yaml  exp_8.yaml
experiments/a1_lidar_rays_fabric_room/setup/: exp.yaml  sensor_fabric.yaml  sensor_fabric_64.yaml
plannerbenchmark/exec/: postProcessor  runner
plannerbenchmark/generic/: experiment.py  logger.py  planner.py
plannerbenchmark/planner/: __init__.py  fabricPlanner.py  filterSensorFabricPlanner.py  sensorFabricPlanner.py
plannerbenchmark/postProcessing/: experiment_animator.py  helpers.py  metrics.py  parallelPlotting.py  seriesComparison.py  seriesComparisonPlotting.py  seriesEvaluation.py
plannerbenchmark/ros/: ros_pcl_converter_node.py
(+1026 files in other folders)
