[tool.poetry]
name = "plannerbenchmark"
version = "0.2.0"
description = "Benchmark suite for local planner in dynamic environment."
authors = ["Max Spahn <m.spahn@tudelft.nl>"]

[tool.poetry.dependencies]
python = "^3.6.5,<3.10"
forwardkinematics = "^1.0.6"
planarenvs = "^1.0.3" 
urdfenvs = "^0.2.2"
motion-planning-scenes = "^0.3.0"
fabrics = {path = "../../Develop/fabrics"}
Sphinx = { version = "4.2.0", optional = true }
sphinx-rtd-theme = { version = "1.0.0", optional = true }
sphinxcontrib-napoleon = { version = "0.7", optional = true }


[tool.poetry.extras]
mpc = ['robotmpcs']
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon"]

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^6.2"
pylint = "^2.13.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
